<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/board"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/seeds_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/seeds_description"
            android:textAppearance="?android:attr/textAppearance" />

        <Spinner
            android:id="@+id/seeds_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.90"
            android:textAppearance="?android:attr/textAppearance" />

        <TextView
            android:id="@+id/computer_skill_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/computer_skill_description"
            android:textAppearance="?android:attr/textAppearance" />

        <Spinner
            android:id="@+id/computer_skill_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.90" />

        <TextView
            android:id="@+id/who_begins_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/who_begins_description"
            android:textAppearance="?android:attr/textAppearance" />

        <Spinner
            android:id="@+id/who_begins_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.90" />

        <TextView
            android:id="@+id/empty_capture_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/empty_capture_variation"
            android:textAppearance="?android:attr/textAppearance" />

        <Spinner
            android:id="@+id/empty_capture_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.90" />

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.90"
            android:onClick="onClickStartGame"
            android:text="@string/start_game" />

        <Button
            android:id="@+id/kalaha_tutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.90"
            android:onClick="onClickStartTutorial"
            android:text="@string/start_tutorial" />

    </LinearLayout>
</ScrollView>
