<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/board"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TableRow android:gravity="center_horizontal">

        <TextView
            android:id="@+id/computer_skill_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/computer_skill_description"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="Skill" />

        <Spinner
            android:id="@+id/computer_skill_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.90" />
    </TableRow>

    <TableRow android:gravity="center_horizontal">

        <TextView
            android:id="@+id/who_begins_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/who_begins_description"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="Who begin" />

        <Spinner
            android:id="@+id/who_begins_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.90" />
    </TableRow>

    <TableRow android:gravity="center_horizontal">

        <Button
            android:id="@+id/start"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.90"
            android:onClick="onClickStartGame"
            android:text="@string/start_game"
            tools:text="Play" />

        <Button
            android:id="@+id/oware_tutorial"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.90"
            android:onClick="onClickStartTutorial"
            android:text="@string/start_tutorial"
            tools:text="Tutorial" />

    </TableRow>
</TableLayout>
